--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_marginBottom="14dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="10dp">
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/cbCompleted"
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:buttonTint="@color/material_blue"
             android:minWidth="0dp"
             android:minHeight="0dp" />
 
@@ -26,15 +27,14 @@
             android:id="@+id/tvTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/cbCompleted"
-            android:layout_alignBottom="@id/cbCompleted"
             android:layout_centerVertical="true"
             android:layout_marginHorizontal="3dp"
             android:layout_toStartOf="@id/ivPriority"
             android:layout_toEndOf="@id/cbCompleted"
             android:ellipsize="end"
             android:gravity="center_vertical"
-            android:maxLines="1"
+            android:maxLines="3"
+            android:textColor="@color/textPrimary"
             android:textSize="17sp"
             tools:text="This is a sample task" />
 
